--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
     <title>vue-shopping</title>
+    <style>html{touch-action: none;}</style> 
   </head>
   <body>
     <div id="app"></div>
@@ -16,3 +17,5 @@
     htmlDom.style.fontSize = htmlWidth / 20;
   </script>
 </html>
+
+
